feat: 完成 TrafficLight 插件全功能开发，修复所有编译错误
    feat: 完成 TrafficLight 插件全功能开发，修复所有编译错误

    核心变更：
    1. 基础架构：实现插件主类单例模式，集成 ConfigManager、LanguageManager、TrafficLightManager 等核心管理器
    2. 核心功能：
       - 红绿灯CRUD：支持创建/删除/列表/状态时长设置（/trafficlight create/delete/list/set）
       - 距离触发：玩家靠近/远离时自动激活/禁用红绿灯（可配置触发半径）
       - 数据持久化：自动/手动保存红绿灯数据到 config.yml，支持重载恢复
       - 多语言支持：通过 messages.yml 自定义所有提示文本，支持颜色代码
    3. 配置体系：
       - config.yml：包含基础配置、功能开关、性能优化、调试模式等完整配置项
       - messages.yml：支持占位符替换，适配多语言场景
    4. 命令系统：
       - 5个核心子命令，支持权限校验、参数校验、Tab补全
       - 权限粒度：mu.trafficlight.{create/delete/set/list/reload}，重载支持OP权限
    5. 性能优化：异步距离检测、可配置任务执行间隔，降低服务器压力
    6. 错误处理：全流程异常捕获，控制台日志+玩家提示双重反馈，无编译报错